# bookkeeper-ui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bookkeeper_ui/: __init__.py  anomaly_reviews.py  api.py  backup.py  candidates.py  closes.py  config_loader.py  confirmations.py  exporter.py  importer.py  intake_confirm.py  intake_scan.py  ledger_store.py  periods.py  reconciliations.py  schemas.py  statement_importer.py  statement_store.py  views.py  waivers.py  web.py
bookkeeper_ui/static/: app.css
bookkeeper_ui/templates/: _anomaly_card.html  _card.html  _close_refusal.html  _close_screen.html  _close_signed.html  _closed_banner.html  _closed_refusal.html  _export_result.html  _import_result.html  _intake_already.html  _intake_card.html  _intake_error.html  _intake_gone.html  _intake_resolved.html  _intake_scan_result.html  _reconcile_resolved.html  _reconciliation_gate.html  _resolved.html  _statement_import_result.html  base.html  capture_home.html  close.html  exports.html  import.html  intake.html  ledger.html  package.html  queue.html  reconcile.html
docs/: intake-port.md
examples/: config.json  reconcile-demo.csv  reconcile-demo.json  statements.csv  statements.json  transactions.csv  transactions.json
tests/: conftest.py  test_anomaly_review_store.py  test_api.py  test_backup_service.py  test_candidate_store.py  test_close_review.py  test_close_store.py  test_close_ui.py  test_closed_period_guards.py  test_config_loading.py  test_confirmation_store.py  test_example_config_regime.py  test_export.py  test_export_ui.py  test_import_roundtrip.py  test_intake_api.py  test_intake_scan.py  test_intake_ui.py  test_ledger_store.py  test_package.py  test_package_ui.py  test_reconcile_api.py  test_reconcile_ui.py  test_reconciliation_store.py  test_sign.py  test_statement_import_roundtrip.py  test_statement_store.py  test_ui.py  test_waiver_store.py  test_write_endpoints.py
