[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeper-ui"
version = "0.2.0"
description = "Local, open-source thin UI for the Bessemer Bookkeeper agent — Slice 1: file store (ports) + import + config, and the FastAPI read/write API (categorize, resolve, ledger)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bookkeeper", "bessemer", "agent", "local-first", "ports-and-adapters"]

# The Bookkeeper framework (usebessemer/agent-classes) is the framework dependency.
# For DEV, install it editable from the sibling clone *first*, then this repo:
#     pip install -e ../agent-classes
#     pip install -e '.[test]'
# The plain `bookkeeper` requirement below is then already satisfied. For a
# non-dev install off git, swap it for the commented direct reference.
#
# FastAPI is the async web layer (matches the framework's async contract, serves
# the #3 UI); python-multipart backs the `/import` + confirm/correct form posts;
# Jinja2 renders the #3 templates; uvicorn is the local ASGI server the README
# runs. The framework dataclasses stay pure — pydantic serialization lives only at
# this API boundary; htmx is vendored under `static/` (no runtime CDN dependency).
dependencies = [
  "bookkeeper",
  # "bookkeeper @ git+https://github.com/usebessemer/agent-classes.git",
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  # httpx drives the ASGI app in-process for the end-to-end API tests.
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["bookkeeper_ui"]

# The #3 UI ships its Jinja templates and static assets (vendored htmx + css) as
# package data, so a non-editable `pip install` bundles them too (editable dev
# reads them straight from the tree).
[tool.setuptools.package-data]
bookkeeper_ui = ["templates/*.html", "static/*"]

# Match the framework's test tooling: pytest + pytest-asyncio in auto mode, so
# `async def test_*` runs without a per-test decorator.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
