[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeper-ui"
version = "0.6.0"
description = "Local, open-source thin UI for the Bessemer Bookkeeper agent — categorize-and-confirm, bank reconciliation, period close-review-and-sign, and accountant-package preview + export: file stores (ports) + import + config, the FastAPI read/write API, and the htmx trust-trail UI. Local-first; export writes local files only, no transmission."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bookkeeper", "bessemer", "agent", "local-first", "ports-and-adapters"]

# The Bookkeeper framework (usebessemer/agent-classes) is the framework dependency.
# It has no PyPI release, so we pin the git direct reference at the tag below as the
# shipped default: a plain `bookkeeper` requirement resolves off PyPI to an
# unrelated, squatted third-party package ("GNU Stow with steroids"), giving a
# non-sibling user a green install of the wrong code and a broken app (see #10).
# The `@v0.1.0` tag pins the contract — a bare git URL would float on the
# framework's default branch and silently move the contract we build against.
#
# For DEV against a live sibling clone, install this repo first (which pulls the
# pinned framework), then override with the editable sibling *last* so it wins —
# a direct URL requirement is not satisfied by an already-installed editable, so
# installing the sibling first and this repo second would re-fetch the pinned tag
# and clobber the editable checkout:
#     pip install -e '.[test]'
#     pip install -e ../agent-classes   # editable override — must come last
#
# FastAPI is the async web layer (matches the framework's async contract, serves
# the #3 UI); python-multipart backs the `/import` + confirm/correct form posts;
# Jinja2 renders the #3 templates; uvicorn is the local ASGI server the README
# runs. The framework dataclasses stay pure — pydantic serialization lives only at
# this API boundary; htmx is vendored under `static/` (no runtime CDN dependency).
dependencies = [
  "bookkeeper @ git+https://github.com/usebessemer/agent-classes.git@v0.1.0",
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://github.com/usebessemer/bookkeeper-ui"
Repository = "https://github.com/usebessemer/bookkeeper-ui"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  # httpx drives the ASGI app in-process for the end-to-end API tests.
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["bookkeeper_ui"]

# The #3 UI ships its Jinja templates and static assets (vendored htmx + css) as
# package data, so a non-editable `pip install` bundles them too (editable dev
# reads them straight from the tree).
[tool.setuptools.package-data]
bookkeeper_ui = ["templates/*.html", "static/*"]

# Match the framework's test tooling: pytest + pytest-asyncio in auto mode, so
# `async def test_*` runs without a per-test decorator.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
